--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -63,57 +63,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\block.png" />
-    <Content Include="Content\charge.png" />
-    <Content Include="Content\fire.png" />
-    <Content Include="Content\leftTrackBackwards.png" />
-    <Content Include="Content\leftTrackForward.png" />
-    <Content Include="Content\none.png" />
-    <Content Include="Content\cannonFire.png" />
-    <Content Include="Content\port1.png" />
-    <Content Include="Content\port2.png" />
-    <Content Include="Content\port3.png" />
-    <Content Include="Content\port4.png" />
-    <Content Include="Content\port5.png" />
-    <Content Include="Content\port6.png" />
-    <Content Include="Content\port7.png" />
-    <Content Include="Content\port8.png" />
-    <Content Include="Content\powerBar_power.png" />
-    <Content Include="Content\powerBar_border.png" />
-    <Content Include="Content\bullet.png" />
-    <Content Include="Content\Button_Push.wav" />
-    <Content Include="Content\exitButton.png" />
-    <Content Include="Content\FromHere.mp3" />
-    <Content Include="Content\healthbar_rodrigo_01.png" />
-    <Content Include="Content\healthbar_rodrigo_02.png" />
-    <Content Include="Content\healthbar_rodrigo_03.png" />
-    <Content Include="Content\healthbar_rodrigo_04.png" />
-    <Content Include="Content\healthbar_rodrigo_05.png" />
-    <Content Include="Content\healthbar_rodrigo_07.png" />
-    <Content Include="Content\healthbar_shanya_01.png" />
-    <Content Include="Content\healthbar_shanya_02.png" />
-    <Content Include="Content\healthbar_shanya_03.png" />
-    <Content Include="Content\healthbar_shanya_04.png" />
-    <Content Include="Content\healthbar_shanya_05.png" />
-    <Content Include="Content\healthbar_shanya_06.png" />
-    <Content Include="Content\menuButton.png" />
-    <Content Include="Content\Music\Music_intro.wav" />
-    <Content Include="Content\Music\Music_loopable.wav" />
-    <Content Include="Content\Music\Music_start.wav" />
-    <Content Include="Content\rightTrackBackwards.png" />
-    <Content Include="Content\rightTrackForward.png" />
-    <Content Include="Content\Sounds\Tank_Clang1.wav" />
-    <Content Include="Content\Sounds\Tank_Clang2.wav" />
-    <Content Include="Content\Sounds\Tank_Clang3.wav" />
-    <Content Include="Content\Sounds\Tank_Gun.wav" />
-    <Content Include="Content\Sounds\Tank_Tracks.wav" />
-    <Content Include="Content\startBackground.png" />
+    <Content Include="Content\pixel.png" />
     <Content Include="Content\selogo.png" />
-    <Content Include="Content\startButton.png" />
-    <Content Include="Content\arrow.png" />
-    <Content Include="Content\cannon.png" />
-    <Content Include="Content\turretLeft.png" />
-    <Content Include="Content\turretRight.png" />
     <Content Include="Icon.ico" />
     <Content Include="todo.txt" />
   </ItemGroup>
@@ -121,7 +72,8 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Content\selogo.xnb" />
+    <Folder Include="Content\Music\" />
+    <Folder Include="Content\Sounds\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
