--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -65,6 +65,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Levels\LevelOne.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\pixel.png" />
     <Content Include="Content\selogo.png" />
     <Content Include="Icon.ico" />
