--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -50,18 +50,19 @@
     <Compile Include="SoundManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scenes\Button.cs" />
-    <Compile Include="Scenes\ButtonList.cs" />
     <Compile Include="Scenes\GameScene.cs" />
     <Compile Include="Scenes\IScene.cs" />
     <Compile Include="Scenes\FlashScreenScene.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
-    <Compile Include="Scenes\StartScene.cs" />
     <Compile Include="World\Level.cs" />
     <Compile Include="World\Transmitter.cs" />
+
     <Compile Include="World\TransmitterManager.cs" />
     <Compile Include="World\Wave.cs" />
     <Compile Include="World\WaveManager.cs" />
+    <Compile Include="Scenes\TitleScene.cs" />
+    <Compile Include="Scenes\StoryScene.cs" />
+
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -87,10 +88,13 @@
   <ItemGroup>
     <Folder Include="Content\Music\" />
     <Folder Include="Content\Sounds\" />
+    <None Include="MonoGame.Framework.dll.config" />
+    <None Include="packages.config" />
+    <Folder Include="Content\Title\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
