--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -9,7 +9,7 @@
     <ProjectGuid>{A7E6027B-85BE-4D75-BCB6-5B8C74D760B5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tankontroller</RootNamespace>
+    <RootNamespace>Transmission</RootNamespace>
     <AssemblyName>Tankontroller</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
@@ -43,19 +43,17 @@
   <ItemGroup>
     <Compile Include="DGS.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Scenes\GameOverScene.cs" />
     <Compile Include="SoundManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scenes\Button.cs" />
-    <Compile Include="Scenes\ButtonList.cs" />
     <Compile Include="Scenes\GameScene.cs" />
     <Compile Include="Scenes\IScene.cs" />
     <Compile Include="Scenes\FlashScreenScene.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
-    <Compile Include="Scenes\StartScene.cs" />
     <Compile Include="World\Level.cs" />
     <Compile Include="World\Transmitter.cs" />
+    <Compile Include="Scenes\TitleScene.cs" />
+    <Compile Include="Scenes\StoryScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -126,6 +124,7 @@
     <None Include="Content\selogo.xnb" />
     <None Include="MonoGame.Framework.dll.config" />
     <None Include="packages.config" />
+    <Folder Include="Content\Title\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
