--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Helpers\Circle.cs" />
     <Compile Include="Helpers\RectHelpers.cs" />
+    <Compile Include="Helpers\StringHelpers.cs" />
     <Compile Include="Scenes\GameOverScene.cs" />
     <Compile Include="SoundManager.cs" />
     <Compile Include="Program.cs" />
