--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -54,6 +54,7 @@
     <Compile Include="World\Transmitter.cs" />
     <Compile Include="Scenes\TitleScene.cs" />
     <Compile Include="Scenes\StoryScene.cs" />
+    <Compile Include="Scenes\Story\StoryPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -61,6 +62,9 @@
 
       <Reference Include="MonoGame.Framework">
         <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\$(MonoGamePlatform)\MonoGame.Framework.dll</HintPath>
+      </Reference>
+      <Reference Include="Newtonsoft.Json">
+        <HintPath>packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +129,16 @@
     <None Include="MonoGame.Framework.dll.config" />
     <None Include="packages.config" />
     <Folder Include="Content\Title\" />
+    <None Include="Content\Fonts\PressStart2P.ttf" />
+    <Folder Include="Data\" />
+    <Folder Include="Data\Story\" />
+    <None Include="Content\Fonts\PressStart2P.spritefont" />
+    <None Include="Content\Fonts\8BitLimit.spritefont" />
+    <None Include="Content\Fonts\8BitLimit.ttf" />
+    <Folder Include="Scenes\Story\" />
+    <None Include="Data\Story\Intro.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
