--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -53,10 +53,11 @@
     <Compile Include="Scenes\IScene.cs" />
     <Compile Include="Scenes\FlashScreenScene.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
+    <Compile Include="World\INode.cs" />
     <Compile Include="World\Level.cs" />
+    <Compile Include="World\Node.cs" />
     <Compile Include="World\Transmitter.cs" />
-
-    <Compile Include="World\TransmitterManager.cs" />
+    <Compile Include="World\NodeManager.cs" />
     <Compile Include="World\Wave.cs" />
     <Compile Include="World\WaveManager.cs" />
     <Compile Include="Scenes\TitleScene.cs" />
@@ -69,13 +70,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
-
-      <Reference Include="MonoGame.Framework">
-        <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\$(MonoGamePlatform)\MonoGame.Framework.dll</HintPath>
-      </Reference>
-      <Reference Include="Newtonsoft.Json">
-        <HintPath>packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      </Reference>
+    <Reference Include="MonoGame.Framework">
+      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\$(MonoGamePlatform)\MonoGame.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Levels\LevelOne.txt">
@@ -92,21 +92,20 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Content\Music\" />
-    <Folder Include="Content\Sounds\" />
     <None Include="MonoGame.Framework.dll.config" />
     <None Include="packages.config" />
-    <Folder Include="Content\Title\" />
     <None Include="Content\Fonts\PressStart2P.ttf" />
-    <Folder Include="Data\" />
-    <Folder Include="Data\Story\" />
     <None Include="Content\Fonts\PressStart2P.spritefont" />
     <None Include="Content\Fonts\8BitLimit.spritefont" />
     <None Include="Content\Fonts\8BitLimit.ttf" />
-    <Folder Include="Scenes\Story\" />
     <None Include="Data\Story\Intro.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\Music\" />
+    <Folder Include="Content\Sounds\" />
+    <Folder Include="Content\Title\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
