--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -128,6 +128,9 @@
     <None Include="Data\Stages\01.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Data\Stages\02.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Music\" />
