Made a cycling node. It cycles through a list of colours and then the colour is fixed when it is hacked. Will make good puzzles when combined with an absorber or a unhackable

--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Scenes\FlashScreenScene.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
     <Compile Include="World\Absorber.cs" />
+    <Compile Include="World\Cycler.cs" />
+    <Compile Include="World\CyclingUnhackable.cs" />
+    <Compile Include="World\Detonator.cs" />
     <Compile Include="World\INode.cs" />
     <Compile Include="World\Level.cs" />
     <Compile Include="World\Node.cs" />
