--- a/Transmission.csproj
+++ b/Transmission.csproj
@@ -90,6 +90,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\absorber.png" />
+    <None Include="Content\Levels\sjg01.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="Content\Levels\LevelOne.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -99,6 +102,9 @@
     <Content Include="Content\Levels\LevelTwo.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Content\Levels\sjg02.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="Content\pixel.png" />
     <Content Include="Content\selogo.png" />
     <Content Include="Content\Title\click.png" />
